syntax = "proto3";

package todoproto;

service TodoService {
    rpc getTodos(getTodosRequest) returns (getTodosResponse) {}
    rpc getTodoById (getTodoByIdRequest) returns (Todo) {}
    rpc createTodo(CreateTodoDto) returns (Todo){}
    rpc updateTodo(Todo) returns (Todo){}
    rpc deleteTodo(deleteTodoByIdRequest) returns (deleteSuccessMessage){}
}

message getTodosRequest {

}
message deleteSuccessMessage {
    string message=1;
}

message getTodoByIdRequest {
    string uuid = 1;
}


message deleteTodoByIdRequest {
    string uuid = 1;
}

message getTodosResponse {
    repeated Todo todos = 1;
}

message Todo {
    string uuid = 1;
    string name = 2;
    string description = 3;
}

message CreateTodoDto {
   
    string name = 2;
    string description = 3;
}